Revert "chore: experimental contrast fix to 4.5:1 [skip ci]"
This reverts commit 75bccd1990348091592fd67f90b041e32e2c4b74.

--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -41,7 +41,6 @@ footer {
     }
 
     a {
-      color: $CORPORATE-LIGHT;
       text-decoration: none;
       text-transform: uppercase;
     }
