--- a/src/styles/themes/b2c/properties.scss
+++ b/src/styles/themes/b2c/properties.scss
@@ -17,7 +17,7 @@
 
   //
   // CORPORATE DESIGN COLORS
-  --corporate-primary: #c85000; // ORANGE
+  --corporate-primary: #ff6d00; // ORANGE
   --corporate-secondary: #cc5700; // darken($CORPORATE-PRIMARY, 10%);
   --corporate-light: #ff8a33; // lighten($CORPORATE-PRIMARY, 10%);
   --corporate-dark: #994100; // darken($CORPORATE-PRIMARY, 20%);
